<resources>
    <string name="app_name">ToDoList</string>
    <string name="activity_add_headline">Aufgabe hinzufügen</string>
    <string name="activity_hint_task">Titel der Aufgabe</string>
    <string name="activity_hint_desc">Beschreibung</string>
    <string name="activity_update_headline">Aufgabe bearbeiten</string>
    <string name="activity_update_finished">Aufgabe erledigt</string>
    <string name="fragment_recyclerview_check">check</string>
    <string name="fragment_recyclerview_image">Image</string>
    <string name="activity_image_choice_headline">Bild hinzufügen</string>
    <string name="seconds">%1$d s</string>
    <string name="required_network_type">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="job_service_notification">Job Service notification</string>
    <string name="notification_channel_description">Notifications from Job Service</string>
    <string name="job_scheduled">Job Scheduled, will run when the constraints are met</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_canceled">Jobs Canceled</string>
</resources>