<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <ImageView
                android:id="@+id/fragment_recyclerview_image"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:contentDescription="@string/fragment_recyclerview_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/fragment_recyclerview_text_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_hint_task"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/fragment_recyclerview_text_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_hint_desc"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/fragment_recyclerview_check"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:contentDescription="@string/fragment_recyclerview_check"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>