<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.UpdateTaskActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/background_activity_task"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/activity_update_headline"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/activity_add_text_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/activity_hint_task"
            android:hint="@string/activity_hint_task"
            android:inputType="textShortMessage"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/activity_add_text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/activity_hint_desc"
            android:hint="@string/activity_hint_desc"
            android:inputType="textLongMessage"
            android:textColorHint="@color/colorHint" />

        <CheckBox
            android:id="@+id/checkBoxFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_update_finished"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_update_button_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_delete"
                android:onClick="deleteTask" />

            <Button
                android:id="@+id/activity_update_button_update"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_update"
                android:onClick="updateTask" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>