<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/background_activity_task"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/activity_add_headline"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/activity_add_text_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/activity_hint_task"
            android:hint="@string/activity_hint_task"
            android:inputType="textShortMessage"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/activity_add_text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/activity_hint_desc"
            android:hint="@string/activity_hint_desc"
            android:inputType="textLongMessage"
            android:textColorHint="@color/colorHint" />

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_add_button_save"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_save"
                android:onClick="saveTask" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>